--- a/juegos/spaceinvaders.html
+++ b/juegos/spaceinvaders.html
@@ -21,6 +21,8 @@ canvas{width:100%;height:calc(var(--vh) * 60);display:block;background:transpare
 </style>
 </head>
 <body>
+  <button class="btn-inicio" onclick="irInicioOAtras()">⬅ Inicio</button>
+
 <div class="game-wrap" id="gameWrap">
   
   <div id="menu" class="panel" style="flex-direction:column;text-align:center;">
