Fix HTML encoding issues in sumasyrestas.html

--- a/juegos/sumasyrestas.html
+++ b/juegos/sumasyrestas.html
@@ -130,6 +130,8 @@
 </style>
 </head>
 <body>
+  <button class="btn-inicio" onclick="irInicioOAtras()">⬅ Inicio</button>
+
 
 <div class="contenedor-juego">
   <h2>🧮 Juego de Sumas y Restas</h2>
@@ -268,3 +270,4 @@ document.getElementById('btnNueva').addEventListener('click',nuevaPregunta);
 
 </body>
 </html>
+
