--- a/juegos/sopadeletras_2.html
+++ b/juegos/sopadeletras_2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<link rel="stylesheet" href="../css/estilos.css">
 <meta charset="UTF-8">
 <title>Sopa de Letras</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,7 +49,6 @@ body{
 </head>
 
 <body>
-<button class="btn-inicio" onclick="irInicioOAtras()">⬅ Inicio</button>
 
 <h1>Sopa de Letras</h1>
 
@@ -227,6 +227,6 @@ function marcarPalabraEncontrada(p){
   if(el) el.classList.add("encontrada-palabra");
 }
 </script>
-
+<script src="../js/comun.js"></script>
 </body>
 </html>
