Refactor sumasyrestas.html with external CSS and JS

--- a/juegos/sumasyrestas.html
+++ b/juegos/sumasyrestas.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <link rel="stylesheet" href="../css/estilos.css">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Juego de Sumas y Restas</title>
@@ -267,7 +269,9 @@ function checkResult(inputs,resDigits){
 document.getElementById('btnComenzar').addEventListener('click',nuevaPregunta);
 document.getElementById('btnNueva').addEventListener('click',nuevaPregunta);
 </script>
+<script src="../js/comun.js"></script>
 
 </body>
 </html>
+
 
